Resolve an issue where alternating between torpedoes and phasers in a sector would cause a crash

--- a/datafiles/lang/en.json
+++ b/datafiles/lang/en.json
@@ -17,6 +17,7 @@
   "ui.save": "Save",
   "ui.restart": "Restart",
   "ui.about": "About",
+  "ui.difficulty": "Difficulty",
   "ui.apply": "Apply",
   "ui.return": "To Game",
   "ui.quit": "To Title",
