--- a/datafiles/lang/en.json
+++ b/datafiles/lang/en.json
@@ -222,11 +222,13 @@
   "credits.9": "Marina Mekail",
   "credits.10": "Catalan translation",
   "credits.11": "Joan CiberSheep",
-  "credits.12": "This game is a NON PROFIT Fan Game produced for entertainment purpose only.",
-  "credits.13": "All Characters, all related marks, logos and associated names and reference are copyright and trademark of their respective holders.",
-  "credits.14": "The content of this Fan Game should not be sold, rented or used for any commercial enterprise in any way, shape or form.",
-  "credits.15": "Check out emabolo's other creations at https://emabolo.itch.io",
-  "credits.16": "Check out Jeod's works at https://github.com/JeodC",
-  "credits.17": "This port is open source and free for modification.",
-  "credits.18": "Thank you for playing!",
+  "credits.12": "GMS Port Playtesting",
+  "credits.13":  "Slobters",
+  "credits.14": "This game is a NON PROFIT Fan Game produced for entertainment purpose only.",
+  "credits.15": "All Characters, all related marks, logos and associated names and reference are copyright and trademark of their respective holders.",
+  "credits.16": "The content of this Fan Game should not be sold, rented or used for any commercial enterprise in any way, shape or form.",
+  "credits.17": "Check out emabolo's other creations at https://emabolo.itch.io",
+  "credits.18": "Check out Jeod's works at https://github.com/JeodC",
+  "credits.19": "This port is open source and free for modification.",
+  "credits.20": "Thank you for playing!",
 }
